app2/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    asdf: qwer
  name: app2
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: app2
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: app2
    spec:
      containers:
        - image: docker.io/flicker/helloworld:latest
          imagePullPolicy: Always
          name: app2
          ports:
            - containerPort: 9999
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
