app2/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations: {}
  labels:
    asdf: qwer
    qwer: asdf
    devops.gov.bc.ca/argocd-app-shared: shared2-app2-dev
  name: app2
  namespace: iankwatts-dev
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 9999
  selector:
    app: app2
  sessionAffinity: None
  type: ClusterIP
