app2/route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations: {}
  labels:
    asdf: qwer
  name: app2
spec:
  host: app2-iankwatts-prod.apps.klab.devops.gov.bc.ca
  port:
    targetPort: http
  tls:
    termination: edge
  to:
    kind: Service
    name: app2
    weight: 100
  wildcardPolicy: None
