app2/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations: {}
  labels:
  name: app2-network-policy
spec:
  ingress:
    - ports:
        - port: 9999
          protocol: TCP
    - from:
        - podSelector: {}
  podSelector: {}
  policyTypes:
    - Ingress
